[workspace]
members = ["crates/ps", "crates/lepumk"]

[package]
name = "hydrogen"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
anyhow = { version = "1.0.86" }
axum = { version = "0.7.5" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.117" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["json", "local-time"] }
toml = { version = "0.8.2", features = ["default"] }

clap = { version = "4.4.6", features = [
    "derive",
    "wrap_help",
    "env",
    "string",
    "default",
] }

human-panic = { version = "2.0.0" }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
log = { version = "0.4.22" }

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "mysql",
    # "chrono",
    "macros",
    # "any",
] }

nanoid = { version = "0.4.0" }
lazy_static = { version = "1.5.0" }
rdkafka = { version = "0.36.2", features = ["cmake-build", "tracing"] }

# utoipa = "4.2.0"
# utoipa-redoc = { version = "4.0.0", features = ["axum"] }
# utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

tracing-appender = { version = "0.2.3", features = [] }
chrono = { version = "0.4.38" }

ps = { path = "crates/ps" }
lepumk = { path = "crates/lepumk" }
thiserror = "1.0.61"
rand = "0.8.5"
tokio-context = "0.1.3"
enum_dispatch = "0.3.13"
tokio-metrics = "0.3.1"
unique_id = "0.1.5"
query_map = { version = "0.7.0", features = ["url-query"] }

[dev-dependencies]
dotenvy = { version = "0.15.7" }

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
opt-level = 3
overflow-checks = true #  integer overflow checks.
debug = true

[profile.dev]
opt-level = 1
overflow-checks = false
debug = true
